Implemented: Nav, showcases and offers

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,14 @@
-.App {
+@import "nav";
+@import "showCase";
+@import "offer";
+
+
+.app {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    max-width: 80vw;
+    margin: 0 auto
 }
 
 main {
