--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,4 +1,5 @@
 @import "variables";
+
 .app-bar {
   color: $base-font-color !important;
   background-color: white !important;
@@ -80,5 +81,16 @@
       background-color: #9abefd;
       color: white;
     }
+  }
+}
+
+.logo-image-mobile {
+  display: flex;
+  width: 100%;
+  height: 50px;
+
+
+  @media (min-width: 960px) {
+    display: none;
   }
 }
