Basic footer without data

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,10 @@
 @import 'infoSection';
 @import "aboutUs";
 @import "comment";
+@import "footer";
 
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
-
 
 .app {
     display: flex;
