--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -1,5 +1,5 @@
-@import "singleOffer";
-@import "offerList";
+@use "singleOffer";
+@use "offerList";
 
 .offer-content-title {
   padding: 60px 0 0 40px;
